@@ -33,7 +33,7 @@
         },
         "user" : "vscp",
         "password": "secret",
-        "clientid" : "the-vscp-daemon-fluorine-debug",  
+        "clientid" : "fluorine vscpd",  
         "publish-format" : "json",
         "subscribe-format" : "auto",
         "qos" : 1,
@@ -165,7 +165,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level1-logger-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -292,7 +292,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-logger-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -417,7 +417,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-lmsensors-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -542,7 +542,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-socketcan-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -667,7 +667,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-mqtt-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -792,7 +792,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-tcpiplink-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -917,7 +917,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-rawethernet-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -1042,7 +1042,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-sim-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
@@ -1167,7 +1167,7 @@
                     },
                     "user" : "vscp",
                     "password": "secret",
-                    "clientid" : "vscp-level2-1wire-driver-fluorine-debug",  
+                    "clientid" : "",  
                     "publish-format" : "json",
                     "subscribe-format" : "auto",
                     "qos" : 1,
