@@ -33,7 +33,7 @@
     },
     "user": "vscp",
     "password": "secret",
-    "clientid": "the-vscp-daemon",
+    "clientid": "",
     "publish-format": "json",
     "subscribe-format": "auto",
     "qos": 1,
@@ -157,7 +157,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level1-logger-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -277,7 +277,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level1-can4vscp-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -397,7 +397,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level1-socketcan-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -517,7 +517,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level1-can232-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -637,7 +637,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-logger-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -755,7 +755,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-lmsensors-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -873,7 +873,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-socketcan-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -991,7 +991,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-mqtt-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -1109,7 +1109,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-tcpiplink-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -1227,7 +1227,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-rawethernet-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -1345,7 +1345,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-simulation-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
@@ -1463,7 +1463,7 @@
           },
           "user": "vscp",
           "password": "secret",
-          "clientid": "vscp-level2-one-wire-driver",
+          "clientid": "",
           "publish-format": "json",
           "subscribe-format": "auto",
           "qos": 1,
